Fixed the swagger generation
